<resources>
    <string name="app_name">Anasayfa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_new_account">Kayıt Ol</string>
    <string name="account_login">Giriş Yap</string>
    <string name="login_ekran">Login Ekranı</string>
    <string name="register_ekran">Kayıt Ol</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="password">Parola</string>
    <string name="age">Yaş:</string>
    <string-array name="kan_grublari">
        <item>A Rh+</item>
        <item>A Rh-</item>
        <item>B Rh+</item>
        <item>B Rh-</item>
        <item>AB Rh+</item>
        <item>AB Rh-</item>
        <item>0 Rh+</item>
        <item>0 Rh-</item>
    </string-array>

    <string-array name="Bolge">
        <item>Mağusa</item>
        <item>Lefkoşa</item>
        <item>İskele</item>
        <item>Girne</item>
        <item>Güzelyurt</item>
    </string-array>

    <string-array name="SSS">
        <item>A Rh+         </item>
        <item>A Rh-</item>
        <item>B Rh+         </item>
        <item>B Rh-         </item>
        <item>AB Rh+        </item>
        <item>AB Rh-        </item>
        <item>0 Rh+         </item>
        <item>0 Rh-         </item>
    </string-array>
    <string name="title_activity_login">Giriş Yap</string>
    <string name="title_activity_register">Kayıt Ol</string>
    <string name="title_activity_user">Profil</string>
    <string name="title_activity_sss">Sık Sorulan Sorular</string>
    <string name="title_activity_hospital">Hastaneler</string>
    <string name="title_activity_maps">Harita</string>
    <string name="title_activity_magusa">Mağusa</string>
    <string name="title_activity_bildirim">Bildirimler</string>
</resources>
