<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_anasayfa"
        tools:context=".LoginActivity">


        <TextView
            android:id="@+id/txtinfo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_login"
            android:textColor="@android:color/white"

            android:layout_marginTop="55dp"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/txtinfo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_below="@id/txtinfo1"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/usermaillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtinfo2"
            android:hint="@string/email"
            android:textColorHint="@color/colorwhite"
            android:inputType="textEmailAddress"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_login"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/yumusatma"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/passwordlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usermaillogin"
            android:hint="@string/password"
            android:textColorHint="@color/colorwhite"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>


    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@drawable/bg_anasayfa"
        app:itemTextColor="@color/colorwhite"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
